--- a/views/index.html
+++ b/views/index.html
@@ -50,25 +50,25 @@
             </div>
             <div class="img_destacados">
                 <div>
-                    <img src="" alt="imagen1">
+                    <img src="" alt="producto1.jpg">
                     <div class="precio">
                         <p>precio 1 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="" alt="imagen2">
+                    <img src="" alt="producto2.jpg">
                     <div class="precio">
                         <p> precio 2 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="" alt="imagen3">
+                    <img src="" alt="producto3sillas.jpg">
                     <div class="precio">
                         <p>precio 3 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="" alt="imagen4">
+                    <img src="" alt="producto4sillon.jpg">
                     <div class="precio">
                         <p>precio 4 </p>
                     </div>
