se incorporo libreria de iconos en index y en etiqueta de loggin

--- a/views/loggin.html
+++ b/views/loggin.html
@@ -25,9 +25,9 @@
     <div class="login">
         <h2>Ingrese con red social</h2>
         <div class="login-items">
-          <button class="fb"><i class="facebook"></i> Acceder con Facebook</button>
-          <button class="tw"><i class="twitter"></i> Acceder con Twitter</button>
-          <button class="correo"><i class="envelope"></i> Acceder con Correo</button>
+          <button class="fb"><i class="fa-brands fa-square-facebook"></i> Acceder con Facebook</button>
+          <button class="tw"><i class="fa-brands fa-twitter"></i> Acceder con Twitter</button>
+          <button class="correo"><i class="fa-solid fa-envelope"></i> Acceder con Correo</button>
         </div>
         </div>
 </body>
