modificacion en imagen

--- a/views/index.html
+++ b/views/index.html
@@ -52,25 +52,25 @@ rel="stylesheet" />
             </div>
             <div class="img_destacados">
                 <div>
-                    <img src="" alt="producto1.jpg">
+                    <img src="producto1.jpg" alt="imagen producto1 ">
                     <div class="precio">
                         <p>precio 1 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="" alt="producto2.jpg">
+                    <img src="producto2.jpg" alt="imagen producto2">
                     <div class="precio">
                         <p> precio 2 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="" alt="producto3sillas.jpg">
+                    <img src="producto3sillas.jpg" alt="imagen producto3">
                     <div class="precio">
                         <p>precio 3 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="" alt="producto4sillon.jpg">
+                    <img src="producto4sillon.jpg" alt="imagen producto 4">
                     <div class="precio">
                         <p>precio 4 </p>
                     </div>
