arreglo de imagenes

--- a/views/index.html
+++ b/views/index.html
@@ -46,31 +46,31 @@ rel="stylesheet" />
         </header>
 
         <section class="cuerpo">
-            <div class="CARRUSEL"> <img src="" alt="imagenes"> </div>
+            <div class="CARRUSEL"> <img src="./imagenes/fotoliving.jpg" alt="imagenes"> </div>
             <div class="p_destacados">
                 <p> Productos Destacados</p>
             </div>
             <div class="img_destacados">
                 <div>
-                    <img src="producto1.jpg" alt="imagen producto1 ">
+                    <img src="./imagenes/producto1.jpg" alt="imagen producto1 ">
                     <div class="precio">
                         <p>precio 1 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="producto2.jpg" alt="imagen producto2">
+                    <img src="./imagenes/producto2.jpg" alt="imagen producto2">
                     <div class="precio">
                         <p> precio 2 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="producto3sillas.jpg" alt="imagen producto3">
+                    <img src="./imagenes/producto3sillas.jpeg" alt="imagen producto3">
                     <div class="precio">
                         <p>precio 3 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="producto4sillon.jpg" alt="imagen producto 4">
+                    <img src="./imagenes/producto4sillon.jpg" alt="imagen producto 4">
                     <div class="precio">
                         <p>precio 4 </p>
                     </div>
