--- a/views/loggin.html
+++ b/views/loggin.html
@@ -27,9 +27,9 @@ rel="stylesheet" />
     <div class="login">
         <h2>Ingrese con red social</h2>
         <div class="login-items">
-          <button class="fb"><i class="fa-brands fa-square-facebook"></i> Acceder con Facebook</button>
-          <button class="tw"><i class="fa-brands fa-twitter"></i> Acceder con Twitter</button>
-          <button class="correo"><i class="fa-solid fa-envelope"></i> Acceder con Correo</button>
+          <button class="fb"><i class="fab fa-facebook"></i> Acceder con Facebook</button>
+          <button class="tw"><i class="fab fa-twitter"></i> Acceder con Twitter</button>
+          <button class="correo"><i class="fas fa-envelope-square"></i> Acceder con Correo</button>
         </div>
         </div>
 </body>
