Definicion de tipografia

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css\style.css">
     <title>Document</title>
 </head>
@@ -46,31 +45,31 @@ rel="stylesheet" />
         </header>
 
         <section class="cuerpo">
-            <div class="CARRUSEL"> <img src="./imagenes/fotoliving.jpg" alt="imagenes"> </div>
+            <div class="CARRUSEL"> <img width="100%" src="./imagenes/fotoliving.jpg" alt="imagenes"> </div>
             <div class="p_destacados">
                 <p> Productos Destacados</p>
             </div>
             <div class="img_destacados">
                 <div>
-                    <img src="./imagenes/producto1.jpg" alt="imagen producto1 ">
+                    <img width="100%" src="./imagenes/producto1.jpg" alt="imagen producto1 ">
                     <div class="precio">
                         <p>precio 1 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="./imagenes/producto2.jpg" alt="imagen producto2">
+                    <img width="100%" src="./imagenes/producto2.jpg" alt="imagen producto2">
                     <div class="precio">
                         <p> precio 2 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="./imagenes/producto3sillas.jpeg" alt="imagen producto3">
+                    <img width="100%" src="./imagenes/producto3sillas.jpeg" alt="imagen producto3">
                     <div class="precio">
                         <p>precio 3 </p>
                     </div>
                 </div>
                 <div>
-                    <img src="./imagenes/producto4sillon.jpg" alt="imagen producto 4">
+                    <img width="100%" src="./imagenes/producto4sillon.jpg" alt="imagen producto 4">
                     <div class="precio">
                         <p>precio 4 </p>
                     </div>
