--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&family=Roboto:wght@300;700&display=swap');
+
+
+
+
+
 .promociones{
     background-color: rgb(243, 136, 153);
     text-align: center;
