--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,36 +1,100 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&family=Roboto:wght@300;700&display=swap');
 
+ 
+body{
+    font-family: "Montserrat", Sans-serif;
+    background-color: #fefdf1;
+}
+
+/*HEADER*/
+
+.encabezado{
+    background-color: #fefdf1;
+}
 
 
+.fas.fa-shopping-basket{
+    position: absolute;
+    left: 95%;
+    top: 57px;
+}
+
+.far.fa-user-circle{
+    position: absolute;
+    left: 91%;
+    top: 57px;
+}
 
 
 .promociones{
-    background-color: rgb(243, 136, 153);
+    background-color: #f7d6eb;
     text-align: center;
-    font-size: 23px;
+    font-family: "Montserrat", Sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 1.5px;
+    margin: 0px;
 }
 
-.logo{
+img {
+    max-width: 100vw;
     text-align: center;
 }
 
-.busqueda{
-    background-color: rgb(244, 208, 154);
-    width: 500px;
+.logo-img{
     display: flex;
     justify-content: center;
 }
 
+
+.logo{
+    width: 30%;
+    height: 10%;
+
+    }
+
+
+.flexsearch--form{
+    display: flex;
+    justify-content: center;
+    
+}
+.flexsearch--input, .flexsearch--submit{
+    background-color: #FFFDD0; 
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid rgba(67,67,67,0.3);
+    
+}
+ 
+.flexsearch--input{
+    width: 60vw;
+}
+
+
+
 .categorias{
     display: flex;
     justify-content:space-around;
+    padding: 10px;
+    font-size: 13px;
 }
+
+
+
+
+
+
+.CARRUSEL{
+    width: 60;
+    text-align: center;
+}
+
 
 .p_destacados{
     text-align: center;
-    background-color: pink;
+    background-color: #EBB5D6;
 }
-
 
 
 
