--- a/views/home.html
+++ b/views/home.html
@@ -91,36 +91,43 @@
 
     <footer class="pie">
         <div class="informacion">
-            <h3>INFORMACION</h3>
-            <ul>
-                <li> Preguntas frecuentes </li>
-                <li> Cambios y devoluciones </li>
-                <li> Envios </li>
-            </ul>
-        </div>
-        <div class="informacion">
-            <h3>SERVICIOS</h3>
-            <ul>
-                <li> Preguntas frecuentes </li>
-                <li> Cambios y devoluciones </li>
-                <li> Envios </li>
-            </ul>
-        </div>
-        <div class="informacion">
-            <h3>CONTACTO</h3>
-            <ul>
-                <li> Preguntas frecuentes </li>
-                <li> Cambios y devoluciones </li>
-                <li> Envios </li>
-            </ul>
-        </div>
-        <div class="informacion">
-            <h3>NEWSLETTER</h3>
-            <ul>
-                <li> Preguntas frecuentes </li>
-                <li> Cambios y devoluciones </li>
-                <li> Envios </li>
-            </ul>
+
+
+            <div class="info-flex">
+                <h4>INFORMACION</h4>
+                <p class="piePag"> Preguntas frecuentes </p>
+                <p class="piePag"> Cambios y devoluciones </p>
+                <p class="piePag"> Envios </p>
+            </div>
+
+
+
+
+            <div class="contacto-flex">
+                <h4>CONTACTO</h4>
+                <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p>
+                <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p>
+                <p class="piePag"> <i class="far fa-envelope"></i> Email </p>
+            </div>
+
+
+            <div class="new-flex">
+                <h4>NEWSLETTER</h4>
+                <h6> Suscribite para recibir alertas</h6>
+                <form class="suscribite" action="/" method="get">
+                    <input type="email" name="email" placeholder="ejemplo@gmail.com">
+                    <button type="submit"> Suscribirse </button>
+
+                </form>
+            </div>
+
+
+            <div class="redes-flex">
+                <h4>NUESTRAS REDES</h4>
+                <i class="fab fa-facebook-square"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
+
         </div>
 
     </footer>
