--- a/views/cart.html
+++ b/views/cart.html
@@ -99,15 +99,16 @@
             </button>
         </div>
         <div id="refresh-cart">
-            <i class="fa-sharp fa-solid fa-badge-check"></i>
+            <i class="fa-solid fa-box-check"></i>
             Carrito actualizado
         </div>
 
-        <div>
-            <section>
+        <div class="total-cart">
+            <section id="total">
             Total del carrito
             </section>
-            <div>
+
+            <div class="content-parcial">
 
             <span>
             Total parcial 
@@ -119,16 +120,16 @@
 
             </div>
 
-            <div>
-          <span>
+            <div class="envio">
+          <span id="center">
          Envio
           </span>
-          <p>
+          <p class="aling-envio">
         Acordar Envio <br> las actualizaciones de envio se actualizaran durante el pago <br> Calcular envio
           </p>
             </div>
 
-            <div>
+            <div id="total2">
            <span>
            Total
            </span>
@@ -137,9 +138,9 @@
            </span>
             </div>
 
-            <section>
+            <section id="regalo">
            <div>
-        tienes una tarjeta de regalo?
+            ¿Tienes una tarjeta de regalo?
            </div>
            <div>
         <button>
@@ -156,9 +157,6 @@
            </div>
             </section>
 
-            <section>
-
-            </section>
         </div>
     </section>
     <footer class="pie">
