--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
                 <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
             </div>
             <div class="logo-img">
-                <div class="logo"> <img width="100%" src="./imagenes/logoFinal.jpg" alt="HOME&DECO"> </div>
+                <div class="logo"> <img  id="img-principal" width="100%" src="./imagenes/logoFinal.jpg" alt="HOME&DECO"> </div>
             </div>
 
             <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a>  </div>
