--- a/views/home.html
+++ b/views/home.html
@@ -14,16 +14,16 @@
 
 <body>
     <header class="head">
-        <section class="encabezado">
+    
             <div class="promociones">
                 <p>3 y 6 cuotas sin interes - 10% de descuento con transferencia</p>
             </div>
             <div class="logo-img">
-                <div class="logo"> <img  id="img-principal" width="100%" src="./imagenes/logoFinal.jpg" alt="HOME&DECO"> </div>
+                <div class="logo"> <img  id="img-principal" width="100%" src="./imagenes/logo-header.jpg" alt="HOME&DECO"> </div>
             </div>
 
             <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a>  </div>
-            <div class="user"> <i class="far fa-user-circle"></i> </div>
+            <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i>  </a> </div>
 
             <!-- BARRA BUSQUEDA -->
 
@@ -50,7 +50,7 @@
             </nav>
 
 
-        </section>
+      
 
     </header>
 
@@ -95,9 +95,9 @@
 
             <div class="info-flex">
                 <h4>INFORMACION</h4>
-                <p class="piePag"> Preguntas frecuentes </p>
-                <p class="piePag"> Cambios y devoluciones </p>
-                <p class="piePag"> Envios </p>
+              <a href="/preguntasFrecuentes">  <p class="piePag"> Preguntas frecuentes </p> </a> 
+               <a href="/Cambios"> <p class="piePag"> Cambios y devoluciones </p></a>  
+               <a href="/envios">  <p class="piePag"> Envios </p> </a>
             </div>
 
 
@@ -105,27 +105,26 @@
 
             <div class="contacto-flex">
                 <h4>CONTACTO</h4>
-                <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p>
-                <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p>
-                <p class="piePag"> <i class="far fa-envelope"></i> Email </p>
+               <a href="/info"> <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p></a> 
+               <a href="/info"> <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p> </a> 
+               <a href="/info>"> <p class="piePag"> <i class="far fa-envelope"></i> Email </p></a> 
             </div>
 
 
             <div class="new-flex">
                 <h4>NEWSLETTER</h4>
-                <h6> Suscribite para recibir alertas</h6>
-                <form class="suscribite" action="/" method="get">
-                    <input type="email" name="email" placeholder="ejemplo@gmail.com">
-                    <button type="submit"> Suscribirse </button>
+                <h6 class="newsletter"> Suscribite para recibir novedades!</h6>
+                <form  action="/" method="get">
+                    <input class="suscribite" type="email" name="email" placeholder="ejemplo@gmail.com">
+                    <button class="suscrib" type="submit"> Suscribirse </button>
 
                 </form>
             </div>
 
-
             <div class="redes-flex">
                 <h4>NUESTRAS REDES</h4>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-instagram"></i>
+                <a href="http://facebook.com"> <i class="fab fa-facebook-square"></i> </a>
+                <a href="http://instagram.com"> <i class="fab fa-instagram"></i> </a>
             </div>
 
         </div>
