--- a/views/cart.html
+++ b/views/cart.html
@@ -69,6 +69,8 @@
                     Subtotal
                 </th>
             </tr>
+
+            
             <tbody>
                 <th>
                     <img src="/imagenes/mesa de comedor.jpg" alt="mesa" width="100">
@@ -107,36 +109,35 @@
             <section id="total">
             Total del carrito
             </section>
-
-            <div class="content-parcial">
-
-            <span>
-            Total parcial 
-            </span>
-            
-            <span>
-            $125.000
-            </span>
-
-            </div>
-
-            <div class="envio">
-          <span id="center">
-         Envio
-          </span>
-          <p class="aling-envio">
-        Acordar Envio <br> las actualizaciones de envio se actualizaran durante el pago <br> Calcular envio
-          </p>
-            </div>
-
-            <div id="total2">
-           <span>
-           Total
-           </span>
-           <span>
-          $125.000
-           </span>
-            </div>
+<table id="precios-envio">
+    <tbody>
+        <tr>
+            <td>
+Total parcial
+            </td>
+            <td>
+$125000
+            </td>
+        </tr>
+         <tr>
+            <td>
+Envio
+            </td>
+            <td>
+                Acordar Envio <br> las actualizaciones de envio se actualizaran durante el pago <br> Calcular envio
+            </td>
+        </tr>
+          <tr>
+            <td>
+Total 
+            </td>
+            <td>
+$125000
+            </td>
+        </tr>
+    </tbody>
+    </table>
+   
 
             <section id="regalo">
            <div>
@@ -144,17 +145,18 @@
            </div>
            <div>
         <button>
-            Nro de la tarjeta de rgalo
+            Nro de la tarjeta de regalo
         </button>
         <button>
             Aplicar
         </button>
-           </div>
-           <div>
+                  
         <button>
             Finalizar compra
         </button>
            </div>
+ 
+           
             </section>
 
         </div>
