--- a/views/register.html
+++ b/views/register.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css\register.css">
     <title>HOME&DECO</title>
 </head>
 
@@ -24,70 +24,21 @@
 
             <div class="carrito_login"> <a href="/cart"><i class="fas fa-shopping-basket"></i></a>  </div>
             <div class="user"> <a href="/loggin"> <i class="far fa-user-circle"></i>  </a> </div>
-
-            <!-- BARRA BUSQUEDA -->
-
-            <div class="flexsearch">
-
-                <form class="flexsearch--form" action="#" method="post">
-                    <div class="flexsearch--input-wrapper">
-                        <input class="flexsearch--input" type="search" placeholder="Buscar productos">
-                    </div>
-                    <input class="flexsearch--submit" type="submit" value="&#10140;" />
-                </form>
-
-            </div>
-            <nav class="categorias">
-                <a href="/"> Living </a>
-
-                <a href="/"> Cocina </a>
-
-                <a href="/"> Dormitorio </a>
-
-                <a href="/"> Exterior </a>
-
-                <a href="/"> Contacto </a>
-            </nav>
-
-
-      
-
     </header>
 
-    <section class="cuerpo">
-        <div class="CARRUSEL">
-            <img width="50%" src="./imagenes/portada.jpg" alt="imagenes">
-        </div>
-        <div class="p_destacados">
-            <p> Productos Destacados</p>
-        </div>
-        <div class="img_destacados">
-            <div>
-                <img width="100%" src="./imagenes/producto1.jpg" alt="imagen producto1 ">
-                <div class="precio">
-                    <p>precio 1 </p>
-                </div>
-            </div>
-            <div>
-                <img width="100%" src="./imagenes/producto2.jpg" alt="imagen producto2">
-                <div class="precio">
-                    <p> precio 2 </p>
-                </div>
-            </div>
-            <div>
-                <img width="100%" src="./imagenes/producto3sillas.jpeg" alt="imagen producto3">
-                <div class="precio">
-                    <p>precio 3 </p>
-                </div>
-            </div>
-            <div>
-                <img width="100%" src="./imagenes/producto4sillon.jpg" alt="imagen producto 4">
-                <div class="precio">
-                    <p>precio 4 </p>
-                </div>
-            </div>
-        </div>
-    </section>
+   <body>
+    <form action="/views/loggin.html" class="registro">
+        <h1 id="tituloform">Regístrate</h1>
+        <label id="nombre">Escriba su nombre: <input type="text" class="form_input" id="nombre" name="nombre" placeholder="Ej: Federico"/></label>
+        <label id="apellido">Escriba su apellido: <input type="text" class="form_input" id="apellido" name="apellido" placeholder="Ej: Martinez"/></label>
+        <label id="email">Correo electrónico: <input type="email" class="form_input" id="email" name="email" placeholder="Ej: federico@gmail.com"/></label>
+        <label id="fnac">Fecha de nacimiento: <input type="date" class="form_input" id="fnac" name="fnac" /></label>
+        <label id="Contraseña">Contraseña: <input type="password" class="form_input" id="Contraseña" name="Contraseña"/></label>
+        <input type="submit" class="boton_enviar" value="Enviar">
+
+
+    </form>
+   </body>
 
     <footer class="pie">
         <div class="informacion">
