--- a/views/home.html
+++ b/views/home.html
@@ -48,7 +48,10 @@
 
                 <a href="/"> Contacto </a>
             </nav>
-
+ <!-- MENU BURGER -->
+ <div class="burger-menu">
+    <i class="fas fa-bars"></i>
+</div>
 
       
 
@@ -105,9 +108,9 @@
 
             <div class="contacto-flex">
                 <h4>CONTACTO</h4>
-               <a href="/info"> <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p></a> 
-               <a href="/info"> <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p> </a> 
-               <a href="/info>"> <p class="piePag"> <i class="far fa-envelope"></i> Email </p></a> 
+                <a href="/info">  <p class="piePag"><i class="fas fa-map-marker-alt"></i> Ubicacion </p></a> 
+                <a href="/info">  <p class="piePag"> <i class="fab fa-whatsapp"></i> Telefono </p> </a> 
+                <a href="/info"> <p class="piePag"> <i class="far fa-envelope"></i> Email </p></a> 
             </div>
 
 
