--- a/public/css/styleloggin.css
+++ b/public/css/styleloggin.css
@@ -1,21 +1,305 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-  }
-  .controls{
-    display:flex
-  }
-  .container{
-    width: 100%;
-    height: 100vh;
-    padding: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,100&family=Roboto:wght@300;700&display=swap');
+
+
+body{
+    font-family: "Montserrat", Sans-serif;
+    margin: 0%;
+}
+
+/*HEADER*/
+
+
+
+
+.fas.fa-shopping-basket{
+    position: absolute;
+    left: 95%;
+    top: 57px;
+}
+
+.far.fa-user-circle{
+    position: absolute;
+    left: 86%;
+    top: 57px;
+    cursor: pointer;
+}
+
+.fas.fa-shopping-basket:hover, .far.fa-user-circle:hover{
+    font-size: 25px;
+}
+
+
+.promociones{
+    background-color: antiquewhite;
+    text-align: center;
+    font-family: "Montserrat", Sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: 1.5px;
+    margin: 0px;
+}
+
+
+
+.logo-img{
+    height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
-  } 
+}
 
-.login-items{
- align-items: center;
+.logo-img .logo{
+    width: 25%;
+    height: 10%;
+    }
+
+
+.flexsearch--form{
+    display: flex;
+    justify-content: center;
+    
+}
+.flexsearch--input, .flexsearch--submit{
+    background-color: #FFFDD0; 
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid rgba(67,67,67,0.3);
+    
+}
+ 
+.flexsearch--input{
+    width: 30vw;
+}
+
+
+/*BODY*/
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+ body{
+  
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: "Montserrat", Sans-serif;
+ }
+ .container{
+  display: flex;
+  justify-content: center;
+ }
+ .form-body{
+  width:400px;
+  min-width: 300;
+  border-radius: 10px;
+  border-top-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  margin:10px;
+  align-items: center;
+}
+h2{
+  text-align: center;
+  font-size: 1.rem;
+  font-weight: 50;
+  margin-bottom: 25px;
+  
+}
+ .form-body input {
+  display: block;
+  margin: auto;
+  height: 40px;
+  width: 75%;
+  padding-left: 10px;
+  border: 1px solid #f7d6eb;
+  border-radius: 2px;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  outline: none;
+  font-family: "Montserrat", Sans-serif;
+  
+  }
+  .form-body i{
+    flex:1;
+    text-align: center;
+    font-size: 20px;
+    position:absolute;
+    right: 58%;
+    
+  }
+  .form-body input [type= "text"]{
+    margin-top: 50px;
+  }
+   ::placeholder{
+    font-size: 1rem;
+    
+   }
+   .form-body input:hover{
+    border:2px solid #f7d6eb;
+   } 
+
+   .form-body button [type= "submit"]{
+    display: block;
+    margin:auto;
+    margin-top: 25px;
+    margin-bottom: 30px;
+    height: 40px;
+    width: 78%;
+    background: #f7d6eb; 
+    border-radius: 2px;
+    cursor: pointer;
+    outline: none;
+    transition:all .5s ease;
+    
+   }
+   form a {
+    justify-content: right;
+    
+  }
+
+   .form-body button:hover{
+    color:#f7d6eb;
+    border: 2px solid #f7d6eb;
+    background: linear-gradient(#f7d6eb,#e81f9e );
+  
+  }
+  .contra{
+    text-align: center;
+  color:#444
+  }
+  .login-items{
+    display: flex;
+   justify-content: center;
+     }
+  .login-items i{
+height: 45px;
+width: 45px;
+display: flex;
+align-items: center;
+justify-content: center;
+color:#444;
+border: 2px solid #f7d6eb;
+border-radius: 50px;
+margin: 0  5px;
+
+
+
+  }
+
+
+
+
+footer{
+    background-color:#cdc1b3
+}
+
+.fab.fa-facebook-square, .fa-instagram{
+    align-self: center;
+    font-size: 25px;
+    margin: 5px;
+    color: black
+}
+
+
+
+
+h4{
+    font-family: "Montserrat", Sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    text-align: center;
+    margin-inline: auto;
+    text-decoration: underline;
+}
+
+
+.informacion {
+    flex-direction: column;
+}
+
+.redes-flex, .new-flex, .contacto-flex, .info-flex{
+    text-align:center ;
+}
+
+.piePag{
+    font-size: 14px;
+    color: #00000085;
+}
+
+.suscribite{
+    font-size: 15px;
+    border-radius: 10px;
+}
+
+.suscrib{
+background-color: #D8AF8C;
+border-radius: 5px;
+color: white;
+cursor: pointer;
+font-size: 15px;
+margin-top: 5px;
+}
+
+.newsletter{
+    text-align: center;
+    font-family: montserrat;
+    color: #00000085;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    cursor: pointer;
+    text-decoration: underline gray
+}
+
+
+
+
+
+@media(min-width: 576px){
+
+    .informacion{
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+      height: 219px;
+    }
+    
+    .redes-flex, .new-flex, .contacto-flex, .info-flex{
+        display: flex;
+        flex-direction: column;
+        margin: 5px;
+    }
+    
+    h4{
+        text-decoration: overline;
+    }
+
+
+.fab.fa-facebook-square, .fab.fa-instagram{
+    cursor: pointer;}
+
+.fab.fa-facebook-square:hover, .fab.fa-instagram:hover{
+    font-size: 35px;
+}
+
+
+.far.fa-user-circle{
+    left: 90%
+}
+
+.burger-menu {
+    display: none;
+} 
+
+.categorias{
+    display: flex;
+    justify-content:space-evenly;
+    padding: 10px;
+    font-size: 13px;
+}
+
 }
